Minor context menu layout bug on certain widths.

--- a/src/component/Menu.module.css
+++ b/src/component/Menu.module.css
@@ -13,6 +13,7 @@
 @media only screen and (min-width: 384px) {
     .host {
         right: var(--space-small);
+        max-width: calc(384px - var(--space-small) - var(--space-small));
     }
 }
 
